    the method directive instead.  See RDoc::Parser::Ruby
  * Removed --ri-system as it is unused by Ruby's makefiles

* N Bug Fixes
  * nodoc'd classes no longer appear in the index.  Bug #23751 by Clifford
    Heath.
  * Fix 1.9 compatibility issues.  Bug #23815 by paddor.
  * Darkfish now respects --charset
  * RDoc doesn't crash with def (blah).foo() end

=== 2.3.0 / 2009-01-28

* 3 Major Enhancements
  * Michael Granger's Darkfish generator is now the default for HTML output
  * Various rdoc generation speedups by Hongli Lai.  Patches #22555, #22556,
    #22557, #22562, #22565.
  * rdoc/discover.rb files are loaded automatically from installed gems

* 8 Minor Enhancements
  * Added a space after the commas in ri class method lists.  RubyForge
    enhancement #22182.
  * Improved ri --interactive
  * Generators can now override generated file locations
  * Moved unmaintained CHM generator to it's own package
  * Moved unmaintained extra HTML templates to their own package
  * Removed experimental texinfo generator
  * Converted to minitest
  * Known classes and modules list outputs once per line now for grep

* 11 Bug Fixes
  * Fix missing superclass in ri output
  * Fix an RDoc crash when told to parse an empty file
  * Ignore nonexistent files instead of crashing
  * .txt and .rdoc files are always considered text.  Patch #22897 by Aaron
    Patterson.
  * When merging ri data with a nonexistant directory, RDoc no longer crashes
  * Fix visibility of methods in XML output.  Issue by Yehuda Katz.
  * Fixed relative link generation
  * Fix crash, RDoc now ignores comments above local variable assignments in
    modules
  * RDoc now only accepts adjacent comments for rb_define_module and
    rb_define_class
  * C file RDoc is no longer included in token stream
  * Scan all gem paths to match gem name for ri output

=== 2.2.1 / 2008-09-24
This version provides some minor fixes and enhancements to 2.2.0 intended
to polish RDoc for Ruby 1.9.1.
