@@ -20,6 +20,7 @@
   * Fix 1.9 compatibility issues.  Bug #23815 by paddor.
   * Darkfish now respects --charset
   * RDoc doesn't crash with def (blah).foo() end
+  * RDoc doesn't crash with #define functions
 
 === 2.3.0 / 2009-01-28
 
